Javascript isn't working for some reason

--- a/FetchRewards.html
+++ b/FetchRewards.html
@@ -2,6 +2,7 @@
     <body>
         <input type = "text" id = "userInput1"><br>
         <button id = "button1">Add Transaction</button><br><br>
+        <p id = "test">12</p><br>
 
         <input type = "text" id = "userInput2"><br>
         <button id = "button2">Spend Points</button><br><br>
