Figured it out lol
Removed module part in html

--- a/FetchRewards.html
+++ b/FetchRewards.html
@@ -1,15 +1,15 @@
 <html>
     <body>
         <input type = "text" id = "userInput1"><br>
-        <button id = "button1">Add Transaction</button><br><br>
+        <button type = "button" onclick = "addTransaction()">Add Transaction</button><br><br>
         <p id = "test">12</p><br>
 
         <input type = "text" id = "userInput2"><br>
-        <button id = "button2">Spend Points</button><br><br>
+        <button type = "button">Spend Points</button><br><br>
 
         <input type = "text" id = "userInput3"><br>
-        <button id = "button3">Return Balances</button><br><br>
+        <button type = "button">Return Balances</button><br><br>
 
-        <script src = "FetchRewards.js" type = "module"></script>
+        <script src = "FetchRewards.js"></script>
     </body>
-</html>
+</html]\=768ui9ygh
