--- a/FetchRewards.html
+++ b/FetchRewards.html
@@ -1,14 +1,16 @@
 <html>
     <body>
         <input type = "text" id = "userInput1"><br>
-        <button type = "button" onclick = "addTransaction()">Add Transaction</button><br><br>
-        <p id = "test">12</p><br>
+        <button type = "button" onclick = "addTransaction()">Add Transaction</button><br>
+        <p id = "output1"></p>
 
         <input type = "text" id = "userInput2"><br>
-        <button type = "button">Spend Points</button><br><br>
+        <button type = "button" onclick = "spendPoints()">Spend Points</button><br>
+        <p id = "output2"></p>
 
         <input type = "text" id = "userInput3"><br>
-        <button type = "button">Return Balances</button><br><br>
+        <button type = "button" onclick = "returnBalances()">Return Balances</button><br>
+        <p id = "output3"></p>
 
         <script src = "FetchRewards.js"></script>
     </body>
